# authman-samba-app/src/main/java/org/bremersee/authman/samba/business/SambaToolResponseParser.java
@@ -1,0 +1,33 @@
+/*
+ * Copyright 2016 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.bremersee.authman.samba.business;
+
+import java.util.List;
+import javax.validation.constraints.NotNull;
+import org.bremersee.swagger.authman.samba.model.DnsEntry;
+import org.bremersee.swagger.authman.samba.model.DnsZone;
+
+/**
+ * @author Christian Bremer
+ */
+public interface SambaToolResponseParser {
+
+  List<DnsZone> parseDnsZones(@NotNull CommandExecutorResponse response);
+
+  List<DnsEntry> parseDnsRecords(@NotNull CommandExecutorResponse response);
+
+}
